--- a/logic/_public/Exploration des données.ipynb
+++ b/logic/_public/Exploration des données.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "50cc3cd7",
+   "id": "8252d898",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-03T18:49:30.573908Z",
-     "start_time": "2024-05-03T18:49:29.760699Z"
+     "end_time": "2024-05-04T10:38:35.396938Z",
+     "start_time": "2024-05-04T10:38:32.561783Z"
     }
    },
    "outputs": [],
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "72eb3340",
+   "execution_count": 7,
+   "id": "41024c15",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-03T18:49:31.654506Z",
-     "start_time": "2024-05-03T18:49:31.145086Z"
+     "end_time": "2024-05-04T10:39:00.084638Z",
+     "start_time": "2024-05-04T10:38:59.574403Z"
     }
    },
    "outputs": [],
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5a690cfd",
+   "execution_count": 8,
+   "id": "edb25271",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-03T18:49:31.693922Z",
-     "start_time": "2024-05-03T18:49:31.682483Z"
+     "end_time": "2024-05-04T10:39:00.358329Z",
+     "start_time": "2024-05-04T10:39:00.348588Z"
     }
    },
    "outputs": [
@@ -233,7 +233,7 @@
        "[541909 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,12 +244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1ab8dd04",
+   "execution_count": 9,
+   "id": "e5cef4aa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-03T18:49:31.815722Z",
-     "start_time": "2024-05-03T18:49:31.768626Z"
+     "end_time": "2024-05-04T10:39:01.864296Z",
+     "start_time": "2024-05-04T10:39:01.803253Z"
     }
    },
    "outputs": [
@@ -344,7 +344,7 @@
        "max     80995.000000   38970.000000   18287.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,12 +355,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "35a636ca",
+   "execution_count": 16,
+   "id": "fbc4aeb6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-03T18:52:16.366971Z",
-     "start_time": "2024-05-03T18:52:16.161900Z"
+     "end_time": "2024-05-04T10:42:49.262834Z",
+     "start_time": "2024-05-04T10:42:49.249698Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>C536379</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Discount</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>01-12-2010 09:41</td>\n",
+       "      <td>27.50</td>\n",
+       "      <td>14527.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>C536383</td>\n",
+       "      <td>35004C</td>\n",
+       "      <td>SET OF 3 COLOURED  FLYING DUCKS</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>01-12-2010 09:49</td>\n",
+       "      <td>4.65</td>\n",
+       "      <td>15311.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>C536391</td>\n",
+       "      <td>22556</td>\n",
+       "      <td>PLASTERS IN TIN CIRCUS PARADE</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>01-12-2010 10:24</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>17548.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>C536391</td>\n",
+       "      <td>21984</td>\n",
+       "      <td>PACK OF 12 PINK PAISLEY TISSUES</td>\n",
+       "      <td>-24</td>\n",
+       "      <td>01-12-2010 10:24</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>17548.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>C536391</td>\n",
+       "      <td>21983</td>\n",
+       "      <td>PACK OF 12 BLUE PAISLEY TISSUES</td>\n",
+       "      <td>-24</td>\n",
+       "      <td>01-12-2010 10:24</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>17548.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540449</th>\n",
+       "      <td>C581490</td>\n",
+       "      <td>23144</td>\n",
+       "      <td>ZINC T-LIGHT HOLDER STARS SMALL</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>09-12-2011 09:57</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>14397.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541541</th>\n",
+       "      <td>C581499</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>09-12-2011 10:28</td>\n",
+       "      <td>224.69</td>\n",
+       "      <td>15498.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541715</th>\n",
+       "      <td>C581568</td>\n",
+       "      <td>21258</td>\n",
+       "      <td>VICTORIAN SEWING BOX LARGE</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>09-12-2011 11:57</td>\n",
+       "      <td>10.95</td>\n",
+       "      <td>15311.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541716</th>\n",
+       "      <td>C581569</td>\n",
+       "      <td>84978</td>\n",
+       "      <td>HANGING HEART JAR T-LIGHT HOLDER</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>09-12-2011 11:58</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>17315.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541717</th>\n",
+       "      <td>C581569</td>\n",
+       "      <td>20979</td>\n",
+       "      <td>36 PENCILS TUBE RED RETROSPOT</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>09-12-2011 11:58</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>17315.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10624 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       InvoiceNo StockCode                       Description  Quantity  \\\n",
+       "141      C536379         D                          Discount        -1   \n",
+       "154      C536383    35004C   SET OF 3 COLOURED  FLYING DUCKS        -1   \n",
+       "235      C536391     22556    PLASTERS IN TIN CIRCUS PARADE        -12   \n",
+       "236      C536391     21984  PACK OF 12 PINK PAISLEY TISSUES        -24   \n",
+       "237      C536391     21983  PACK OF 12 BLUE PAISLEY TISSUES        -24   \n",
+       "...          ...       ...                               ...       ...   \n",
+       "540449   C581490     23144   ZINC T-LIGHT HOLDER STARS SMALL       -11   \n",
+       "541541   C581499         M                            Manual        -1   \n",
+       "541715   C581568     21258        VICTORIAN SEWING BOX LARGE        -5   \n",
+       "541716   C581569     84978  HANGING HEART JAR T-LIGHT HOLDER        -1   \n",
+       "541717   C581569     20979     36 PENCILS TUBE RED RETROSPOT        -5   \n",
+       "\n",
+       "             InvoiceDate  UnitPrice  CustomerID         Country  \n",
+       "141     01-12-2010 09:41      27.50     14527.0  United Kingdom  \n",
+       "154     01-12-2010 09:49       4.65     15311.0  United Kingdom  \n",
+       "235     01-12-2010 10:24       1.65     17548.0  United Kingdom  \n",
+       "236     01-12-2010 10:24       0.29     17548.0  United Kingdom  \n",
+       "237     01-12-2010 10:24       0.29     17548.0  United Kingdom  \n",
+       "...                  ...        ...         ...             ...  \n",
+       "540449  09-12-2011 09:57       0.83     14397.0  United Kingdom  \n",
+       "541541  09-12-2011 10:28     224.69     15498.0  United Kingdom  \n",
+       "541715  09-12-2011 11:57      10.95     15311.0  United Kingdom  \n",
+       "541716  09-12-2011 11:58       1.25     17315.0  United Kingdom  \n",
+       "541717  09-12-2011 11:58       1.25     17315.0  United Kingdom  \n",
+       "\n",
+       "[10624 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"Quantity\"] <= 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "123835b8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-04T10:38:39.737307Z",
+     "start_time": "2024-05-04T10:38:39.529921Z"
     },
     "code_folding": []
    },
@@ -380,12 +588,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "18e516c3",
+   "execution_count": 6,
+   "id": "9bb4b401",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-03T18:54:53.716911Z",
-     "start_time": "2024-05-03T18:54:53.576805Z"
+     "end_time": "2024-05-04T10:38:40.902465Z",
+     "start_time": "2024-05-04T10:38:40.690728Z"
     }
    },
    "outputs": [
@@ -409,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c2d74ca1",
+   "id": "b021d49c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-03T19:28:34.611589Z",
@@ -507,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c76f4d6e",
+   "id": "7878b16e",
    "metadata": {},
    "outputs": [],
    "source": []
