Update Exploration des données.ipynb

--- a/logic/_public/Exploration des données.ipynb
+++ b/logic/_public/Exploration des données.ipynb
@@ -230,8 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4ccf9532",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ma_fonction(n):\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67fdf35a-c495-4d5c-9660-8c7de551ae74",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -253,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   },
   "varInspector": {
    "cols": {
