Update Exploration des données.ipynb

--- a/logic/_public/Exploration des données.ipynb
+++ b/logic/_public/Exploration des données.ipynb
@@ -234,7 +234,10 @@
    "id": "4ccf9532",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ma_fonction_a_moi():\n",
+    "    return \"bg\""
+   ]
   }
  ],
  "metadata": {
